bynkc/tests/fixtures/negative/496_locale_multiple_message_bundles/src/msgs_b.bynk
commons msgs_b

uses bynk.locale

messages en @reference {
  "farewell" => "Bye"
}
